# personal_account

./: .dockerignore  .test.env  Dockerfile  Readme.md  alembic.ini  config.py  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: deploy.yml
src/: config.py  constants.py  database.py  jwt.py  lifespan.py  main.py  middleware.py  rest.py  schemas.py  utils.py
src/api/: controls.py
src/classes/: __init__.py  answer_class.py  controls.py  events_class.py  news_class.py  predict_class.py  predict_classes.py  reuse_class.py  send_data_class.py  tokens_classes.py  user_data_class.py  user_data_classes.py  visitors_class.py  vk_class.py  yandex_class.py
src/controllers/: __init__.py  answer.py  broker.py  events.py  news.py  predict.py  visitors.py  vk.py  yandex.py
src/database/: __init__.py  database.py  models.py  personaldata.py  schema_rec.py  schemas.py
src/database/schemas/: __init__.py  custom_response.py  vk_schemas.py  (+3 more)
src/errors/: __init__.py  errors.py  func_errors.py
src/interfaces/: __init__.py  answer_interface.py  events_interface.py  news_interface.py  other_registration_interface.py  predict_interface.py  reuse_interface.py  visitor_interface.py
src/middleware/: __init__.py  middleware_valid_tokens.py
src/migration/: env.py
src/recomendate/: controls_recomendate.py
src/responses/: __init__.py  good_response.py
src/routers/: __init__.py  answer.py  chat.py  classifier.py  events.py  get_token.py  logout.py  middleware.py  news.py  predict.py  recomendate.py  set_token.py  user_data.py  visitors.py  vk.py  yandex.py
(+17 files in other folders)
