[tool.poetry]
name = "personal-account"
version = "0.1.0"
description = ""
authors = ["DUDKA <andrejmedvedev2713@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.5"}
asyncio = "^3.4.3"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
pyvalid = "^1.0.4"
aiohttp = {extras = ["speedups"], version = "^3.11.9"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
