[tool.poetry]
name = "personal-account"
version = "0.1.0"
description = ""
authors = ["DUDKA <andrejmedvedev2713@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.5"}
asyncio = "^3.4.3"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
pyvalid = "^1.0.4"
aiohttp = {extras = ["speedups"], version = "^3.11.9"}
slowapi = "^0.1.9"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
phonenumbers = "^8.13.52"
isort = "^6.0.0"
ruff = "^0.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
